<resources>
    <string name="app_name">Financial Management</string>
    <string name="app_icon">app_icon</string>
    <string name="email_address">Enter your email: example@gmail.com</string>
    <string name="password">Enter your password</string>
    <string name="log_in">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="facebook">Sign in with Facebook</string>
    <string name="google">Sign in with Google</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Log-in or register</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up_name">"User name"</string>
    <string name="sign_up_repeat_pwd">"Repeat password"</string>
    <string name="user_name">"User: "</string>
    <string name="user_id">"User id: "</string>
    <string name="user_email">"Email: "</string>
    <string name="deletion_msg">Are you sure, you want to delete this item?</string>
    <string name="yes">Yes</string>
</resources>
